--- a/style.css
+++ b/style.css
@@ -1,19 +1,39 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
+  text-align: center;
+}
+
+header {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 6vw;
+  padding: 20px;
+  background-color: #FFDAB9;
+  border-bottom: 1px solid grey;
+}
+
+.header-text {
+  font-weight: bold;
+  font-size: 34px;
+  color: #FF7F50;
 }
 
 .container {
-  width: 90%;
-  margin: 30px;
+  width: 70%;
+  margin: 60px;
   padding: 20px 20px 60px 40px;
   background-color:beige;
   border: 1px solid #c0c0c0;
   border-radius: 5px;
+  text-align: left;
 }
 
-h1 {
-  font-size: 20px;
-  padding-bottom:10px;
+.h1 {
+  font-size: 24px;
+  padding-bottom: 10px;
+  color: #BDB76B;
 }
 
 .col {
@@ -22,7 +42,7 @@ h1 {
 
 .left-col, .right-col {
   width: 40%;
-  text-align: center;
+  text-align: left;
   border: 1px solid #c0c0c0;
   border-radius: 2px;
 }
@@ -36,7 +56,7 @@ h1 {
   height: 40px;
   border: none;
   border-bottom: 1px solid #e7e6e6;
-  text-align: center;
+  text-align: left;
   font-size: 14px;
 }
 
